feat: strengthen security verification and cleanup flows
Add recent-auth token validation for credentials, OAuth linking, and account deletion flows.

Enforce chat room participation for API, STOMP message, and subscription access.

Clean up adoption comments, images, and chat rooms when posts or users are deleted.